--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -1,4 +1,4 @@
-<form method="post" action="/pup">
+<form method="post" action="/">
     <input name="name">
     <input name="breed">
     <input name="age">
