--- a/views/create_puppy.erb
+++ b/views/create_puppy.erb
@@ -8,5 +8,5 @@
       <p>Puppy Name: <input type="text" name="name"></p>
       <p>Puppy Breed: <input type="text" name="breed"></p>
       <p>Puppy Age: <input type="text" name="age"></p>
-      <input type="submit">
+      <input type="submit" value="submit">
 </form>
